--- a/package.json
+++ b/package.json
@@ -3,27 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@electron/remote": "^2.0.8",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "electron-store": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.55.0"
   },
   "main": "src/electron-starter.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & electron .",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron-dev": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
-    "electron": "electron .",
-    "init": "npm run start & npm run electron-dev"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
